traefik/localhost.fix.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: authentik
spec:
  redirectRegex:
    regex: ^https?://authentik.authentik.svc.cluster.local/(.*)
    replacement: https://authentik.127-0-0-1.nip.io/${1}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authentik-redirect@kubernetescrd
  labels:
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
  name: fix-authentik-redirect
  namespace: authentik
spec:
  rules:
  - host: authentik.authentik.svc.cluster.local
    http:
      paths:
      - backend:
          service:
            name: authentik
            port:
              name: http
        path: /
        pathType: Prefix
